--- a/index.html
+++ b/index.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Advice generator app</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Advice generator app</title>
+  </head>
+  <body>
+    <main class="flex">
+      <div class="container">
+        <h1 class="advice-id">Advice #117</h1>
+        <p class="advice">
+          "It is easy to sit up and take notice, what's difficult is getting up
+          and take action."
+        </p>
+        <img
+          src="images/pattern-divider-mobile.svg"
+          alt=""
+          class="divider-mob"
+        />
+        <img
+          src="images/pattern-divider-desktop.svg"
+          alt=""
+          class="divider-des"
+        />
 
-  Advice #<!-- Advice ID goes here -->
+        <div class="expand flex">
+          <img src="images/icon-dice.svg" alt="" />
+        </div>
+      </div>
+    </main>
 
-  "<!-- Advice text goes here -->"
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
